cmake_minimum_required(VERSION 3.7)
project(5300-Giraffe)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pedantic -Wall -Werror" )
set(SOURCE_FILES
        sql5300.cpp)
add_executable(5300-Giraffe ${SOURCE_FILES})
include_directories(/usr/local/db6/include)
include_directories(~/sql-parser/src)
find_library(BERKELEY_DB db_cxx HINTS "/usr/local/db6/lib")
target_link_libraries(5300-Giraffe ${BERKELEY_DB})
find_library(SQL_PARSER sqlparser HINTS "~/sql-parser" "/usr/local/db6/lib")
target_link_libraries(5300-Giraffe ${SQL_PARSER})
